test/compile_errors/err_keyword_as_var_defer.w
//! expect-check-fail: expected identifier
let defer = 42
fn main:
    let x = 1
